crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__assign_to_immutable_pattern.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × unresolved name `x`
   ╭─[tests/ui/assign_to_immutable_pattern.g:1:1]
 1 │ fn main() { let x = 5; x = 10; x }
   · ▲
   · ╰── unresolved name `x`
   ╰────

  × unresolved name `x`
   ╭─[tests/ui/assign_to_immutable_pattern.g:1:1]
 1 │ fn main() { let x = 5; x = 10; x }
   · ▲
   · ╰── unresolved name `x`
   ╰────
