crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__deref_non_pointer.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × unresolved name `x`
   ╭─[tests/ui/deref_non_pointer.g:1:1]
 1 │ main = () => { let x = 42; *x }
   · ▲
   · ╰── unresolved name `x`
   ╰────
