crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__empty_source.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
error: no 'main' function
