crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__if_condition_must_be_bool.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × type mismatch: expected Bool, found Int
   ╭─[tests/ui/if_condition_must_be_bool.g:1:1]
 1 │ main = () => { if 42 { 1 } else { 0 } }
   · ▲
   · ╰── type mismatch: expected Bool, found Int
   ╰────
