crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__invalid_cast.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × type mismatch: expected Str, found Int
   ╭─[tests/ui/invalid_cast.g:1:1]
 1 │ main = () => 42 as Str
   · ▲
   · ╰── type mismatch: expected Str, found Int
   ╰────
