crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__invalid_question.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × unresolved name `v`
   ╭─[tests/ui/invalid_question.g:1:1]
 1 │ main = () => { let x = 42?; x }
   · ▲
   · ╰── unresolved name `v`
   ╰────

  × unresolved name `x`
   ╭─[tests/ui/invalid_question.g:1:1]
 1 │ main = () => { let x = 42?; x }
   · ▲
   · ╰── unresolved name `x`
   ╰────
