crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__invalid_return_type.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × type mismatch: expected Bool, found Int
   ╭─[tests/ui/invalid_return_type.g:1:1]
 1 │ fn foo() -> bool { 42 }
   · ▲
   · ╰── type mismatch: expected Bool, found Int
 2 │ fn main() -> i64 { foo() }
   ╰────

  × type mismatch: expected Int, found Bool
   ╭─[tests/ui/invalid_return_type.g:1:1]
 1 │ fn foo() -> bool { 42 }
   · ▲
   · ╰── type mismatch: expected Int, found Bool
 2 │ fn main() -> i64 { foo() }
   ╰────
