crates/glyim-cli-tests-full/tests/integration/snapshots/integration__ui__missing_closing_brace.snap
---
source: crates/glyim-cli-tests-full/tests/integration/ui.rs
expression: actual
---
  × expected } but reached end of input
